# mixamo-blend-pipeline

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  INTEGRATION_COMPLETE.md  LICENSE  README.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
config/: README.md
config/examples/: blend_batch.yaml  download_batch.yaml  full_pipeline.yaml  upload_batch.yaml
docs/: BLENDANIM_INTEGRATION.md  CLI.md  DEPLOYMENT.md  MIXAMO_INTEGRATION.md  VISUALIZATIONS.md  VISUALIZATION_QUICKREF.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml.template  service.yaml
scripts/: blend.py  download.py  pipeline.py  test_upload.py  upload.py
src/: __init__.py
src/blender/: __init__.py  blender.py
src/downloader/: __init__.py  downloader.py
src/npc_engine/: __init__.py  engine.py
src/uploader/: __init__.py  uploader.py
src/utils/: __init__.py  config.py  config_loader.py  dashboard.py  health_check.py  logging.py  metrics.py  retry.py  secrets.py  visualizations.py
tests/: test_blender.py  test_cli.py  test_config.py  test_config_loader.py  test_downloader.py  test_logging.py  test_npc_engine.py  test_uploader.py
tests/integration/: test_pipeline.py
